tests/errors/typecheck/test_tc_02_type_mismatch.pc
#import std.console;
int main() {
    int x = "hello";
}
